--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
   <hr />
 
-  <h2>Flower Menu</h2>
-  <a class="link-button" href="https://cdn.discordapp.com/attachments/1036796832849862708/1389797469965127851/flower.png?ex=6865ed42&is=68649bc2&hm=33d7f1edbbf1ec2bed228d3c6a775dcd8774ff6beee275b73c3fdfb66833d699&" target="_blank">View Full Flower Menu</a>
+  <h2>Flower/Shrooms Menu</h2>
+  <a class="link-button" href="https://cdn.discordapp.com/attachments/1036796832849862708/1389797469965127851/flower.png?ex=6865ed42&is=68649bc2&hm=33d7f1edbbf1ec2bed228d3c6a775dcd8774ff6beee275b73c3fdfb66833d699&" target="_blank">View Full Flower/Shrooms Menu</a>
 
 </body>
 </html>
