--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
   <hr />
 
   <h2>Main Menu</h2>
-  <a class="link-button" href="https://cdn.discordapp.com/attachments/1036796832849862708/1389796208557686844/menu.png?ex=6865ec15&is=68649a95&hm=a11c91699a840314ec49fec5f55e193d2da2e2c18da181089355508a199955e9&" target="_blank">View Full Main Menu</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" target="_blank">View Full Main Menu</a>
 
   <hr />
 
   <h2>Flower/Shrooms Menu</h2>
-  <a class="link-button" href="https://cdn.discordapp.com/attachments/1036796832849862708/1389797469965127851/flower.png?ex=6865ed42&is=68649bc2&hm=33d7f1edbbf1ec2bed228d3c6a775dcd8774ff6beee275b73c3fdfb66833d699&" target="_blank">View Full Flower/Shrooms Menu</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowebitr.png" target="_blank">View Full Flower/Shrooms Menu</a>
 
 </body>
 </html>
