--- a/index.html
+++ b/index.html
@@ -61,5 +61,11 @@
   <h2>Flower/Shrooms Menu</h2>
   <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowerBIT.png" target="_blank">View Full Flower/Shrooms Menu</a>
 
+  <hr />
+
+  <h2>Direct Downloads</h2>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" download>Download Main Menu</a><br>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowerBIT.png" download>Download Flower/Shrooms Menu</a>
+
 </body>
 </html>
