--- a/index.html
+++ b/index.html
@@ -6,66 +6,67 @@
   <title>Hazy's Market</title>
   <style>
     body {
-      background-color: black;
-      color: white;
+      background-color: #121212;
+      color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 30px;
+      padding: 20px;
     }
 
     h1 {
-      font-size: 3em;
+      font-size: 32px;
       margin-bottom: 10px;
     }
 
     hr {
       border: none;
-      border-top: 2px solid white;
-      margin: 30px auto;
-      width: 80%;
+      height: 2px;
+      background-color: #ffffff;
+      margin: 20px 0;
     }
 
     h2 {
-      font-size: 2em;
+      font-size: 24px;
       margin-bottom: 10px;
     }
 
     .link-button {
-      background-color: white;
-      color: black;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 1em;
-      text-decoration: none;
       display: inline-block;
-      margin-top: 10px;
+      background-color: #ffffff;
+      color: #000;
+      padding: 10px 20px;
+      margin: 10px 0;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
     }
 
     .link-button:hover {
-      background-color: #ddd;
+      background-color: #dddddd;
     }
   </style>
 </head>
 <body>
 
   <h1>Hazy's Market</h1>
-  <hr />
+
+  <hr>
 
   <h2>Main Menu</h2>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" target="_blank">View Full Main Menu</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" target="_blank">View Menu</a>
 
-  <hr />
+  <hr>
 
   <h2>Flower/Shrooms Menu</h2>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowerBIT.png" target="_blank">View Full Flower/Shrooms Menu</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowebitr.png" target="_blank">View Flower/Shrooms</a>
 
-  <hr />
+  <hr>
 
-  <h2>Direct Downloads</h2>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" download>Download Main Menu</a><br>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowerBIT.png" download>Download Flower/Shrooms Menu</a>
+  <h2>Direct Download</h2>
+  <a class="link-button" href="https://github.com/hazymarket/-/raw/main/main.zip" download>
+    Download Main/Flower Menu
+  </a>
 
 </body>
 </html>
+
