--- a/index.html
+++ b/index.html
@@ -6,67 +6,65 @@
   <title>Hazy's Market</title>
   <style>
     body {
-      background-color: #121212;
-      color: #fff;
+      background-color: black;
+      color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 20px;
+      padding: 30px;
     }
 
     h1 {
-      font-size: 32px;
+      font-size: 3em;
       margin-bottom: 10px;
     }
 
     hr {
       border: none;
-      height: 2px;
-      background-color: #ffffff;
-      margin: 20px 0;
+      border-top: 2px solid white;
+      margin: 30px auto;
+      width: 80%;
     }
 
     h2 {
-      font-size: 24px;
+      font-size: 2em;
       margin-bottom: 10px;
     }
 
     .link-button {
-      display: inline-block;
-      background-color: #ffffff;
-      color: #000;
+      background-color: white;
+      color: black;
       padding: 10px 20px;
-      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1em;
       text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
+      display: inline-block;
+      margin-top: 10px;
     }
 
     .link-button:hover {
-      background-color: #dddddd;
+      background-color: #ddd;
     }
   </style>
 </head>
 <body>
 
   <h1>Hazy's Market</h1>
-
-  <hr>
+  <hr />
 
   <h2>Main Menu</h2>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" target="_blank">View Menu</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/menu.png" target="_blank">View Full Main Menu</a>
 
-  <hr>
+  <hr />
 
   <h2>Flower/Shrooms Menu</h2>
-  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowebitr.png" target="_blank">View Flower/Shrooms</a>
+  <a class="link-button" href="https://raw.githubusercontent.com/hazymarket/-/refs/heads/main/flowerBIT.png" target="_blank">View Full Flower/Shrooms Menu</a>
 
-  <hr>
+  <hr />
 
   <h2>Direct Download</h2>
-  <a class="link-button" href="https://github.com/hazymarket/-/raw/main/main.zip" download>
-    Download Main/Flower Menu
-  </a>
+  <a class="link-button" href="https://github.com/hazymarket/-/raw/refs/heads/main/menu.zip" download>Direct Download Main/Flower Menu</a>
 
 </body>
 </html>
-
